# dns-forwarder

./: .gitignore  Cargo.toml  README.md  README.zh.md  config.toml
.github/workflows/: release.yaml
domains/: gfw.txt
src/: cache.rs  config.rs  dns.rs  extra_domain.rs  forwarder.rs  main.rs  server.rs  trie.rs
src/config/: mod.rs  nft.rs
