[package]
name = "dns-forwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["net", "macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
anyhow = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3"
trie-hard = "0.2.0"
fastrand = "2.4.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

