[package]
name = "dns-forwarder"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["net", "macros", "rt-multi-thread", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"] }
anyhow = "1"
fastrand = "2.4.1"
log = "0.4.30"
env_logger = { version = "0.11.10", default-features = false }
lru = "0.18"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

